--- a/style.css
+++ b/style.css
@@ -269,43 +269,16 @@ footer{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Responsive for small device */
 
 @media screen and (max-width: 576px) {
   .navbar, .team_section {
     flex-direction: column;
+  }
+  .features{
+    gap: 0;
+    flex-direction: column;
+    width: 100%;
   }
   .navbar ul li {
     padding: 10px;
@@ -314,7 +287,7 @@ footer{
  .team_img_container{
   grid-template-columns: 1fr;
   margin: 4px;
-  box-shadow: 1px 1px 10px 3px #000;
+  box-shadow: 3px 7px 7px #000;
  }
 
  .our-features{
@@ -326,13 +299,59 @@ footer{
   margin: 10px 0;
 }
 
-    #team_btn{
-     margin-top: 10px;
-     padding: 13px;
-     font-size: 20px;
-    }
+ #team_btn{
+  margin-top: 10px;
+  padding: 13px;
+  font-size: 20px;
+}
+
+ .feature_img img{
+  width: 90%;
+  margin-left: 20px;
+}
+#experience_year{
+    font-size: 10px;
+    font-weight: 700;
+}
+#experience_badge{
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-right: -400px;
+    margin-bottom: -100px;
+}
+
+.fact_container{
+  margin-left: 20px;
+}
+
+ .card_box{
+  flex-direction: column;
+  padding: 20px;
+  margin-top: 10px;
+ }
+
+ .card_container{
+  width: 90%;
+ }
+ .card_box{
+  grid-template-columns: 1fr;
+  gap: 14px;
+ }
+
+ .sponspor_company{
+  flex-direction: column;
+  grid-template-columns: 1fr;
+  gap: 30px;
+  margin-left: 30%;
+ }
+ .footer_container{
+  width: 90%;
+
+ }
 
 }
+
 
 
 
