--- a/style.css
+++ b/style.css
@@ -357,10 +357,57 @@ footer{
 
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams, .features{
+    .teams, .features, .team_section{
         flex-direction: column;
     }
-    .our-features{
+      .our-features{
         margin: 50px auto;
     }
+
+    .features{
+    gap: 0;
+    flex-direction: column;
+    width: 100%;
   }
+
+ .feature_img img{
+  width: 90%;
+  margin-left: 20px;
+}
+#experience_year{
+    font-size: 20px;
+    font-weight: 700;
+}
+#experience_badge{
+    padding: 20px 30px;
+    font-size: 2rem;
+    font-weight: 500;
+    margin-left: -300px;
+    margin-bottom: -50px;
+}
+.fact_container{
+  margin-left: 20%;
+}
+.card_box{
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+ }
+
+ .card_container{
+  width: 98%;
+ }
+ 
+
+ .sponspor_company{
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+width: 95%;
+ }
+ .footer_container{
+  width: 90%;
+
+ }
+
+
+
+ }
